--- a/package.json
+++ b/package.json
@@ -5,22 +5,33 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^3.1.1",
+    "clsx": "^1.1.1",
+    "gatsby": "^3.1.2",
     "gatsby-plugin-gatsby-cloud": "^2.1.0",
-    "gatsby-plugin-image": "^1.1.1",
+    "gatsby-plugin-image": "^1.1.2",
+    "gatsby-plugin-layout": "^2.1.0",
     "gatsby-plugin-manifest": "^3.1.0",
     "gatsby-plugin-offline": "^4.1.0",
     "gatsby-plugin-react-helmet": "^4.1.0",
-    "gatsby-plugin-sharp": "^3.1.1",
+    "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-sharp": "^3.1.2",
+    "gatsby-remark-source-name": "^1.0.0",
     "gatsby-source-filesystem": "^3.1.0",
     "gatsby-transformer-sharp": "^3.1.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
-    "prettier": "2.2.1"
+    "eslint": "^7.22.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-mdx": "^1.11.1",
+    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react-hooks": "^4.2.0"
   },
   "keywords": [
     "gatsby"
