--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "clsx": "^1.1.1",
-    "gatsby": "^3.1.2",
-    "gatsby-plugin-gatsby-cloud": "^2.1.0",
-    "gatsby-plugin-image": "^1.1.2",
-    "gatsby-plugin-layout": "^2.1.0",
-    "gatsby-plugin-manifest": "^3.1.0",
-    "gatsby-plugin-offline": "^4.1.0",
-    "gatsby-plugin-react-helmet": "^4.1.0",
+    "gatsby": "^3.2.0",
+    "gatsby-plugin-gatsby-cloud": "^2.2.0",
+    "gatsby-plugin-graphql-config": "^0.11.0",
+    "gatsby-plugin-image": "^1.2.0",
+    "gatsby-plugin-layout": "^2.2.0",
+    "gatsby-plugin-manifest": "^3.2.0",
+    "gatsby-plugin-offline": "^4.2.0",
+    "gatsby-plugin-react-helmet": "^4.2.0",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^3.1.2",
+    "gatsby-plugin-sharp": "^3.2.0",
+    "gatsby-remark-images": "^4.2.0",
     "gatsby-remark-source-name": "^1.0.0",
-    "gatsby-source-filesystem": "^3.1.0",
-    "gatsby-transformer-sharp": "^3.1.0",
+    "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-transformer-remark": "^3.2.0",
+    "gatsby-transformer-sharp": "^3.2.0",
+    "gatsby-transformer-yaml": "^3.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -25,7 +29,7 @@
     "typescript": "^4.2.3"
   },
   "devDependencies": {
-    "eslint": "^7.22.0",
+    "eslint": "^7.23.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
