--- a/package.json
+++ b/package.json
@@ -5,36 +5,40 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@types/react": "^17.0.9",
     "clsx": "^1.1.1",
-    "gatsby": "^3.2.0",
-    "gatsby-plugin-gatsby-cloud": "^2.2.0",
-    "gatsby-plugin-graphql-config": "^0.11.0",
-    "gatsby-plugin-image": "^1.2.0",
-    "gatsby-plugin-layout": "^2.2.0",
-    "gatsby-plugin-manifest": "^3.2.0",
-    "gatsby-plugin-offline": "^4.2.0",
-    "gatsby-plugin-react-helmet": "^4.2.0",
-    "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^3.2.0",
-    "gatsby-remark-images": "^4.2.0",
+    "gatsby": "^3.6.2",
+    "gatsby-plugin-gatsby-cloud": "^2.6.1",
+    "gatsby-plugin-graphql-config": "^0.15.0",
+    "gatsby-plugin-image": "^1.6.0",
+    "gatsby-plugin-layout": "^2.6.0",
+    "gatsby-plugin-manifest": "^3.6.0",
+    "gatsby-plugin-offline": "^4.6.0",
+    "gatsby-plugin-react-helmet": "^4.6.0",
+    "gatsby-plugin-react-svg": "^3.0.1",
+    "gatsby-plugin-sass": "^4.6.0",
+    "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-remark-images": "^5.3.0",
     "gatsby-remark-source-name": "^1.0.0",
-    "gatsby-source-filesystem": "^3.2.0",
-    "gatsby-transformer-remark": "^3.2.0",
-    "gatsby-transformer-sharp": "^3.2.0",
-    "gatsby-transformer-yaml": "^3.2.0",
+    "gatsby-source-filesystem": "^3.6.0",
+    "gatsby-transformer-remark": "^4.3.0",
+    "gatsby-transformer-sharp": "^3.6.0",
+    "gatsby-transformer-yaml": "^3.6.0",
+    "node-sass": "^6.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "typescript": "^4.2.3"
+    "sass": "^1.34.1",
+    "typescript": "^4.3.2"
   },
   "devDependencies": {
-    "eslint": "^7.23.0",
+    "eslint": "^7.27.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-mdx": "^1.11.1",
-    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-mdx": "^1.13.0",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0"
   },
   "keywords": [
