--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+	"clean-start": "gatsby clean; gatsby develop"
   },
   "repository": {
     "type": "git",
