--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "@testing-library/react": "^11.2.7",
     "@types/jest": "^26.0.23",
     "@types/react-test-renderer": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
     "babel-jest": "^27.0.2",
     "babel-preset-gatsby": "^1.7.1",
     "cypress": "^7.5.0",
-    "eslint": "^7.28.0",
+    "eslint": "^7.29.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-import": "^2.23.4",
@@ -71,7 +73,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-	"clean-start": "gatsby clean; gatsby develop"
+    "clean-start": "gatsby clean; gatsby develop"
   },
   "repository": {
     "type": "git",
