--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,13 +15,17 @@
 		"@typescript-eslint"
 	],
 	"settings": {
+		"react": {
+			"version": "17.0.2"
+		},
 		"import/resolver": {
 			"node": {
 				"extensions": [
 					".js",
 					".jsx",
 					".ts",
-					".tsx"
+					".tsx",
+					".sass"
 				]
 			}
 		}
@@ -82,7 +86,7 @@
 		],
 		"react/no-danger": 0,
 		"react/prop-types": [
-			"ignore"
+			0
 		],
 		"react/forbid-prop-types": [
 			1,
