--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "cSpell.words": [
-        "cantera"
+        "COPPA",
+        "Secte",
+        "Sybi",
+        "cantera",
+        "infokatot"
     ]
 }
